<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Podcast</string>
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_player">Player</string>
    <string name="add_rss_link">Add an RSS link</string>
    <string name="history">History:</string>
    <string name="delete_all">Delete all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_delete_history">Do you want to delete history?</string>
    <string name="podcast_image">Podcast image</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="description">Description:</string>
    <string name="duration">Duration</string>
    <string name="authors">Author: %s</string>
    <string name="select_an_rss_link">Select an RSS link!</string>
    <string name="select_a_podcast_chapter">Select a podcast chapter!</string>
    <string name="invalid_rss_link">Invalid RSS link</string>
</resources>