<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_bottom"
    tools:context=".ui.player.PlayerFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Podcast example" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/simple_margin"
        android:layout_marginTop="@dimen/simple_margin"
        android:layout_marginEnd="@dimen/simple_margin"
        android:scrollbarSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view"
        app:layout_constraintEnd_toStartOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <TextView
            android:id="@+id/text_view_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            tools:text="This is a description example, this is a description example, this is a description example, this is a description example, this is a description example," />

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/simple_margin"
        android:contentDescription="@string/podcast_image"
        android:src="@drawable/ic_placeholder_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:text="@string/description"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/simple_margin"
        android:layout_marginTop="@dimen/simple_margin"
        android:layout_marginEnd="@dimen/simple_margin"
        android:scrollbarSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title_description">

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            tools:text="This is a description example, this is a description example, this is a description example, this is a description example, this is a description example," />

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <ImageButton
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_skip_previous_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_replay_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause" />

    <ImageButton
        android:id="@+id/btn_replay_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_replay_10_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_play_pause"
        app:layout_constraintStart_toEndOf="@+id/btn_previous"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause" />

    <ImageButton
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selection_button"
        android:contentDescription="@string/play_pause"
        android:src="@drawable/ic_play_arrow_72dp"
        app:layout_constraintBottom_toTopOf="@+id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

    <ImageButton
        android:id="@+id/btn_forward_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_forward_10_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintStart_toEndOf="@+id/btn_play_pause"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_skip_next_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_forward_10"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/simple_margin"
        android:valueFrom="0"
        android:valueTo="1000"
        app:labelBehavior="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_pause" />

    <TextView
        android:id="@+id/text_view_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/simple_margin"
        android:textAlignment="viewStart"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/slider"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        tools:text="0:00" />

    <TextView
        android:id="@+id/text_view_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/simple_margin"
        android:textAlignment="viewStart"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/slider"
        app:layout_constraintTop_toBottomOf="@+id/slider"
        tools:text="5:45" />

</androidx.constraintlayout.widget.ConstraintLayout>